# nix

./: .envrc  .fdignore  .gitignore  .mcp.json  CLAUDE.md  Justfile  Makefile  README.md  bootstrap.sh  devshell.nix  flake.nix  formatter.nix  pyproject.toml  uninstall.sh
.github/workflows/: build.yml  flake-update.yml
dotfiles/: remove-unicode.py
dotfiles/fish/conf.d/: completion.fish  fish-session.fish  leadr.fish  virtualenv.fish  zoxide.fish
dotfiles/fish/functions-darwin/: fix-locationd-permissions.fish  open-reading-list-items-in-tabs.fish  (+1 more)
home/dsully/: jarvis.nix
hosts/jarvis/: darwin-configuration.nix  default.nix  home-configuration.nix  homebrew.nix  options.nix
hosts/server/: containers.nix  options.nix  system-configuration.nix
hosts/zap/: options.nix  system-configuration.nix
lib/: default.nix  mutable-config.nix  nix-core.nix
lib/common/: darwin.nix  homebrew.nix  packages.nix
machines/: jarvis.nix  server.nix
machines/jarvis/: default.nix  home.nix
modules/common/: default.nix  nix.nix  options.nix  packages.nix
modules/darwin/: common.nix  default.nix  home-manager-dsully.nix  homebrew.nix  packages.nix  system.nix
modules/home/: ai.nix  bat.nix  cachix-watch-store.nix  colors.nix  copypaste.nix  default.nix  dotfiles.nix  dsully.nix  gh.nix  ghostty.nix  git.nix  lolcate.nix  meridian.nix  paste.nix  pi.nix  ssh.nix  vivid.nix  xdg-open-svc.nix
modules/system-manager/: caddy.nix  common.nix  docker.nix  opnix.nix
overlays/: default.nix
scripts/: check_upstream_packages.py  uninstall.sh
users/dsully/: home-manager.nix
(+162 files in other folders)
